--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@300&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="./css/main.css" />
 		<!--  style.css -->
 		<title>Holiday Project</title>
 	</head>
