--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!--  style.css -->
 
 		<link rel="stylesheet" href="./css/main.css" />
-		<title>Holiday</title>
+		<title>Holiday Project</title>
 	</head>
 
 	<body>
